--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".tools.SignUpActivity" />
         <activity android:name=".tools.AddPerson" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".tools.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
